// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correcly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $23.00
  </p>
</div>
`;

exports[`should correcly render ExpensesSummary with mulitple expenses 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totalling 
    $2,345.30
  </p>
</div>
`;
